# KinFit

./: .readthedocs.yaml  Entrada.xlsx  Entradas.xlsx  Entradas_exemplo.xlsx  README.md  Untitled1.ipynb  Untitled5.ipynb  main_daniel.py  pyproject.toml  read_initialconditions.py  teste.py
docs/: requirements.txt
docs/source/: conf.py
examples/: batch_reactor.py
kinfit/: __init__.py  interface.py  model.py  optimizer.py  plots.py  residuals.py  stats.py  utils.py
kinfit.egg-info/: PKG-INFO  SOURCES.txt
kinfit/app/: app.py
tests/: test_basic.py
